--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -21,7 +21,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Start Tour"
-            android:id="@+id/button3" />
+            android:id="@+id/startTourButton"
+            android:textColor="@color/white"
+            android:background="@color/scuColor"/>
 
     </LinearLayout>
 </LinearLayout>
