--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -10,56 +10,127 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:background="@android:color/holo_red_light"
-        >
+        android:paddingTop="@dimen/activity_vertical_margin">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/textView"
             android:textStyle="bold"
+            android:text="title"
             android:textAlignment="center"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="false"/>
+            android:layout_alignParentStart="false"
+            android:layout_alignParentTop="false"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentRight="false"/>
 
-        <com.google.android.youtube.player.YouTubePlayerView
-            android:id="@+id/youtube_view"
+        <RelativeLayout
+            android:id="@+id/main"
             android:layout_width="350dp"
             android:layout_height="200dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp" />
+            android:layout_alignParentTop="false"
+            android:layout_below="@+id/textView"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"/>
 
 
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/scrollView"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/youtube_view"
+            android:layout_below="@+id/main"
+            android:layout_above="@+id/button1"
             android:layout_marginTop="10dp"
             android:fillViewport="false">
-
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/textView1"
-                android:layout_below="@+id/youtube_view"
-                android:layout_alignRight="@+id/scrollView"
-                android:layout_alignEnd="@+id/scrollView" />
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Description"
+                    android:id="@+id/textView15"
+                    android:layout_alignTop="@+id/scrollView"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/textView1"
+                    android:layout_below="@+id/youtube_view"
+                    android:layout_alignRight="@+id/scrollView"
+                    android:layout_alignEnd="@+id/scrollView"
+                    android:layout_marginBottom="5dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Users Comments"
+                    android:id="@+id/textView16"
+                    />
+
+                <ListView
+                    android:background="@color/wallet_bright_foreground_disabled_holo_light"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:id="@+id/listView2"
+                    android:layout_alignBottom="@+id/scrollView"
+                    android:layout_alignLeft="@+id/main"
+                    android:layout_alignStart="@+id/main"
+                    android:layout_marginBottom="63dp"
+                    android:layout_weight="2.91"/>
+
+            </LinearLayout>
         </ScrollView>
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Next Destination"
             android:id="@+id/button1"
+            android:textColor="@color/white"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:background="@color/scuColor"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/textView17"
+            android:textStyle="bold"
+            android:text="rating"
+            android:textAlignment="center"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentTop="false"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentRight="true"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_above="@+id/main"
+            android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@+id/textView17"
+            android:src="@android:drawable/btn_star_big_on"/>
 
 
     </RelativeLayout>
