Minor UI updates

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,8 +21,17 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <include layout="@layout/activity_maps"/>
+        <include layout="@layout/activity_maps"/>
+        <include layout="@layout/activity_destination"/>
 
+    </RelativeLayout>
+</ScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
