--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -1,92 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
+        android:background="@color/wallet_hint_foreground_holo_light"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:background="@android:color/holo_purple"
-        >
+        android:paddingTop="@dimen/activity_vertical_margin">
+
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/textView"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="false"
-            android:text="Ratings" />
+            android:layout_alignParentTop="true"
+            android:text="Ratings"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/textView2"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="100dp"
-            android:text="Rate this place" />
+            android:text="Rate this place"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 
-
-               <RatingBar
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/ratingBar1"
-                   android:layout_marginTop="25dp"
-                   android:layout_below="@+id/textView2"
-                   android:layout_centerHorizontal="true" />
-
-
+        <RatingBar
+            android:id="@+id/ratingBar1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView2"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="25dp"/>
 
 
         <Button
+            android:id="@+id/submitComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Submit"
-            android:id="@+id/submitComment"
-            android:layout_alignParentBottom="true"
             android:layout_alignLeft="@+id/ratingBar1"
-            android:layout_alignStart="@+id/ratingBar1"/>
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/ratingBar1"
+            android:text="Submit"/>
 
         <TextView
+            android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Comments"
-            android:id="@+id/textView3"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/commentEditText"
-            android:layout_below="@+id/textView3"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_centerVertical="true"
+            android:text="Comments"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceLarge"/>
 
-        <Button
+        <EditText
+            android:id="@+id/commentEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Skip"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView3"/>
+
+        <Button
             android:id="@+id/skip"
-            android:layout_alignTop="@+id/submitComment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/ratingBar1"
             android:layout_alignRight="@+id/ratingBar1"
-            android:layout_alignEnd="@+id/ratingBar1"/>
+            android:layout_alignTop="@+id/submitComment"
+            android:text="Skip"/>
 
 
     </RelativeLayout>
