--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -7,7 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:background="@color/wallet_hint_foreground_holo_light"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -21,6 +20,7 @@
             android:layout_alignParentStart="false"
             android:layout_alignParentTop="true"
             android:text="Ratings"
+            android:textColor="@color/scuColor"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold"/>
@@ -51,6 +51,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/ratingBar1"
+            android:background="@color/colorAccent"
+            android:textColor="@color/white"
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/ratingBar1"
             android:text="Submit"/>
@@ -81,6 +83,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/ratingBar1"
+            android:background="@color/colorAccent"
+            android:textColor="@color/white"
             android:layout_alignRight="@+id/ratingBar1"
             android:layout_alignTop="@+id/submitComment"
             android:text="Skip"/>
