--- a/app/src/main/res/layout/activity_survey.xml
+++ b/app/src/main/res/layout/activity_survey.xml
@@ -7,7 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:background="@android:color/holo_purple"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -21,6 +20,7 @@
             android:layout_alignParentStart="false"
             android:layout_alignParentTop="true"
             android:text="Survey"
+            android:textColor="@color/scuColor"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold"/>
@@ -149,11 +149,13 @@
         </ScrollView>
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/submitSurvey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:background="@color/colorAccent"
+            android:textColor="@color/white"
             android:text="Submit"/>
 
 
