--- a/app/src/main/res/layout/activity_you_tube_testing.xml
+++ b/app/src/main/res/layout/activity_you_tube_testing.xml
@@ -6,8 +6,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                android:id="@+id/main1"
-                tools:context=".YouTubeTesting">
+                android:id="@+id/main1">
 
     <TextView android:text="Hello World" android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
