--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -1,24 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
+android:layout_width="fill_parent"
 android:layout_height="wrap_content"
-android:padding="@dimen/activity_vertical_margin"
 android:descendantFocusability="blocksDescendants"
-android:gravity="center_vertical">
+android:gravity="center_vertical"
+    android:padding="10dip"
+    android:background="@drawable/list_selector">
+
 
 <ImageView
-    android:layout_width="80dp"
-    android:layout_height="80dp"
+    android:layout_width="70dp"
+    android:layout_height="70dp"
     android:id="@+id/icon" />
+
 
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="New Text"
     android:id="@+id/label"
-    android:textSize="30dp"
     android:ellipsize="end"
     android:singleLine="true"
+    android:textColor="#040404"
+    android:typeface="sans"
+    android:textSize="20dip"
+    android:textStyle="bold"
     android:layout_marginLeft="10dp" />
 
 <Space
@@ -26,10 +31,19 @@ android:gravity="center_vertical">
     android:layout_height="20px"
     android:layout_weight="1" />
 
-<ImageButton
+    <RatingBar
+        android:id="@+id/rating"
+        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:isIndicator="true"
+        android:max="5"
+        android:numStars="5"
+        android:stepSize="1.0" />
+<!--<ImageButton
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/menu"
-    android:src="@drawable/not_favourite" />
+    android:src="@drawable/not_favourite" />-->
 
 </LinearLayout>
