--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -11,12 +11,14 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/textView"
             android:textStyle="bold"
+            android:textColor="@color/colorAccent"
             android:text="title"
             android:textAlignment="center"
             android:layout_alignParentLeft="true"
@@ -44,12 +46,11 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/scrollView"
+            android:id="@+id/detailsScroll"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/main"
-            android:layout_above="@+id/button1"
-            android:layout_marginTop="10dp"
-            android:fillViewport="false">
+            android:layout_marginTop="10dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -61,11 +62,11 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Description"
+                    android:textColor="@color/colorAccent"
                     android:id="@+id/textView15"
                     android:layout_alignTop="@+id/scrollView"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    />
+                    android:layout_alignParentStart="true"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -80,21 +81,19 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorAccent"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Users Comments"
-                    android:id="@+id/textView16"
-                    />
+                    android:id="@+id/textView16"/>
 
                 <ListView
-                    android:background="@color/wallet_bright_foreground_disabled_holo_light"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:id="@+id/listView2"
+                    android:focusable="false"
                     android:layout_alignBottom="@+id/scrollView"
                     android:layout_alignLeft="@+id/main"
-                    android:layout_alignStart="@+id/main"
-                    android:layout_marginBottom="63dp"
-                    android:layout_weight="2.91"/>
+                    android:layout_alignStart="@+id/main"/>
 
             </LinearLayout>
         </ScrollView>
@@ -112,6 +111,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/textView17"
             android:textStyle="bold"
